--- a/WebAppNoAuth/Views/Home/Index.cshtml
+++ b/WebAppNoAuth/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
         <div class="col-12">
             <h1 class="mb-4">Products Catalog</h1>
             
-            @if (Model != null && Model.Any())
+            @if (Model.Any())
             {
                 <div class="table-responsive">
                     <table class="table table-striped table-hover">
