--- a/WebAppNoAuth/Views/_ViewImports.cshtml
+++ b/WebAppNoAuth/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
-﻿@using WebAppNoAuth
+@using WebAppNoAuth
 @using WebAppNoAuth.Models
+@using WebAppNoAuth.Data
+@using WebAppNoAuth.Services
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
